The hover image positions were off by a pixel. This fixes it so that hovering over the image does not make the submit and check status images appear ot shift when hovered over.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -27,7 +27,7 @@ body { padding-top: 60px; }
 }
 
 .submit_maintenance_button:hover {
-  background-position: 322px 0px;
+  background-position: 321px 0px;
 }
 
 .submit_maintenance_button:active{
@@ -43,7 +43,7 @@ background-position: 0px -161px;
 }
 
 .check_status_button:hover {
-background-position: 322px -161px;
+background-position: 321px -161px;
 }
 
 .check_status_button:active{
